--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,5 +1,8 @@
 jdk:
   - openjdk17
 before_install:
-  - sdk install java 17.0.7-open
-  - sdk use java 17.0.7-open
+  # https://sdkman.io/jdks
+  - sdk install java 17.0.7-tem
+  - sdk use java 17.0.7-tem
+  - sdk install maven
+  - mvn -v
