--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,17 @@
-plugins {
-    id 'java'
-    id 'maven-publish'
-}
+apply plugin: 'java'
+apply plugin: 'maven-publish'
 
 group = 'com.eden'
 version = '0.0.1'
 sourceCompatibility = '17'
+targetCompatibility = '17'
 
 repositories {
     mavenCentral()
+}
+java {
+    withSourcesJar()
+//    withJavadocJar()
 }
 ext {
     lombokVersion = '1.18.28'
@@ -31,4 +34,9 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+wrapper {
+    gradleVersion = "8.1.1"
+    distributionType = Wrapper.DistributionType.ALL
 }
