--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,27 @@
-apply plugin: 'java'
-apply plugin: 'maven-publish'
+plugins {
+    id 'java-library'
+    id 'maven-publish'
+}
 
 group = 'com.eden'
 version = '0.0.1'
-sourceCompatibility = '17'
-targetCompatibility = '17'
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.github.chayoung-choi'
+            artifactId = 'java-core'
+            version = '0.0.1'
+
+            from components.java
+        }
+    }
+}
 
 repositories {
     mavenCentral()
 }
-java {
-    withSourcesJar()
-//    withJavadocJar()
-}
+
 ext {
     lombokVersion = '1.18.28'
 }
@@ -34,9 +43,4 @@ dependencies {
 
 test {
     useJUnitPlatform()
-}
-
-wrapper {
-    gradleVersion = "8.1.1"
-    distributionType = Wrapper.DistributionType.ALL
 }
