--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,8 @@ dependencies {
     implementation 'org.springframework:spring-core:6.0.9'
 
     implementation 'org.slf4j:slf4j-api:2.0.7'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'org.slf4j:slf4j-simple:2.0.7'
 
