--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,11 @@ sourceCompatibility = '17'
 
 publishing {
     publications {
-        maven(MavenPublication) {
+        myPublicationName(MavenPublication) {
+            from components.java
             groupId = 'com.github.chayoung-choi' as Publication
             artifactId = 'java-core' as Publication
             version = '0.0.1' as Publication
-
-            from components.java
         }
     }
 }
