--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,12 @@ sourceCompatibility = '17'
 
 publishing {
     publications {
-        myPublicationName(MavenPublication) {
-            from components.java
+        maven(MavenPublication) {
             groupId = 'com.github.chayoung-choi' as Publication
             artifactId = 'java-core' as Publication
             version = '0.0.1' as Publication
+            
+            from components.java
         }
     }
 }
