--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,16 @@
 plugins {
-    id 'java-library'
+    id 'java'
     id 'maven-publish'
 }
 
 group = 'com.eden'
 version = '0.0.1'
 sourceCompatibility = '17'
+targetCompatibility = '17'
+
+java {
+    withSourcesJar()
+}
 
 publishing {
     publications {
@@ -13,7 +18,7 @@ publishing {
             groupId = 'com.github.chayoung-choi' as Publication
             artifactId = 'java-core' as Publication
             version = '0.0.1' as Publication
-            
+
             from components.java
         }
     }
