--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id 'java-library'
     id 'maven-publish'
 }
 
@@ -8,24 +8,20 @@ version = '0.0.1'
 sourceCompatibility = '17'
 targetCompatibility = '17'
 
-java {
-    withSourcesJar()
+repositories {
+    mavenCentral()
 }
 
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId = 'com.github.chayoung-choi' as Publication
-            artifactId = 'java-core' as Publication
-            version = '0.0.1' as Publication
-
             from components.java
+
+            groupId = 'com.github.chayoung-choi'
+            artifactId = 'java-core'
+            version = '0.0.1'
         }
     }
-}
-
-repositories {
-    mavenCentral()
 }
 
 ext {
